--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "holaexpressts",
+  "name": "ts-chat",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "Typescript TS-Node Express Socket.io",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node src/index.ts --transpile-only",
+    "dev": "ts-node-dev src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.2",
+    "socket.io": "^2.3.0",
+    "ts-node": "^8.8.2",
+    "typescript": "^3.8.3"
+  },
+  "devDependencies": {
     "@types/express": "^4.11.0",
-    "express": "^4.16.2"
+    "@types/socket.io": "^2.1.4",
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
