--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
 node_modules
 package-lock.json
 dist
+.env
+*.log
+logs
+tmp
+.DS_Store
+.idea
+.vscode
+Desktop.ini
+$RECYCLE.BIN/
+Thumbs.db
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
