--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.3.0",
+    "socket.io-stream": "^0.9.1",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
   },
