--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "ts-node src/index.ts --transpile-only",
-    "dev": "ts-node-dev src/index.ts"
+    "dev": "ts-node-dev src/index.ts",
+    "test": "mocha -r ts-node/register -w test/**/*test.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.11.0",
+    "@types/mocha": "^7.0.2",
+    "@types/socket.io": "^2.1.4",
     "express": "^4.16.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
@@ -17,8 +21,8 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "@types/express": "^4.11.0",
-    "@types/socket.io": "^2.1.4",
+    "mocha": "^7.1.1",
+    "node-watch": "^0.6.3",
     "ts-node-dev": "^1.0.0-pre.44"
   }
 }
