--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Typescript TS-Node Express Socket.io",
   "main": "src/index.ts",
   "scripts": {
-    "start": "ts-node src/index.ts --transpile-only",
-    "dev": "tsc & ts-node-dev src/index.ts",
+    "start": "npm run build & ts-node src/index.ts --transpile-only",
+    "build": "watchify src/frontend/bundle.ts -p [ tsify --noImplicitAny ] -o src/public/bundle.js",
     "test": "mocha -r ts-node/register -w test/**/*test.ts"
   },
   "author": "",
@@ -14,16 +14,20 @@
     "@types/express": "^4.11.0",
     "@types/mocha": "^7.0.2",
     "@types/socket.io": "^2.1.4",
+    "@types/uniq": "0.0.27",
+    "browserify": "^16.5.1",
     "express": "^4.16.2",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1",
     "ts-node": "^8.8.2",
+    "tsify": "^4.0.1",
     "typescript": "^3.8.3"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/socket.io-client": "^1.4.32",
     "mocha": "^7.1.1",
-    "ts-node-dev": "^1.0.0-pre.44"
+    "ts-node-dev": "^1.0.0-pre.44",
+    "watchify": "^3.11.1"
   }
 }
