--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Typescript TS-Node Express Socket.io",
   "main": "src/index.ts",
   "scripts": {
-    "start": "npm run build & ts-node src/index.ts --transpile-only",
+    "start": "npm run build & ts-node-dev src/index.ts --transpile-only",
     "build": "watchify src/frontend/bundle.ts -p [ tsify --noImplicitAny ] -o src/public/bundle.js",
     "test": "mocha -r ts-node/register -w test/**/*test.ts"
   },
@@ -14,7 +14,6 @@
     "@types/express": "^4.11.0",
     "@types/mocha": "^7.0.2",
     "@types/socket.io": "^2.1.4",
-    "@types/uniq": "0.0.27",
     "browserify": "^16.5.1",
     "express": "^4.16.2",
     "socket.io": "^2.3.0",
