--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify": "^16.5.1",
     "express": "^4.16.2",
     "socket.io": "^2.3.0",
+    "socket.io-msgpack-parser": "^2.2.0",
     "socket.io-stream": "^0.9.1",
     "ts-node": "^8.8.2",
     "tsify": "^4.0.1",
